# django_microservices

common-package/: pyproject.toml
common-package/common/authentication/: custom_auth.py  user.py
common-package/common_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ordermanagement_service/: db.sqlite3  manage.py
ordermanagement_service/order_management/: models.py
ordermanagement_service/order_management/migrations/: 0001_initial.py
ordermanagement_service/ordermanagement_service/: asgi.py  settings.py  urls.py  wsgi.py
usermanagent_service/: db.sqlite3  manage.py
usermanagent_service/user_management/: backends.py  models.py  serializers.py  urls.py  views.py
usermanagent_service/user_management/migrations/: 0001_initial.py
usermanagent_service/usermanagent_service/: asgi.py  settings.py  urls.py  wsgi.py
